--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "ion-rangeslider": "^2.1.4",
     "jquery": "^1.12.4",
+    "jquery-validation": "^1.15.1",
     "jvectormap": "^2.0.4"
   },
   "devDependencies": {
