--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "require": {
-    "gilbitron/php-simplecache": "~1.4"
+    "gilbitron/php-simplecache": "~1.4",
+    "league/plates": "3.*"
   }
 }
